--- a/covid19/style.css
+++ b/covid19/style.css
@@ -160,6 +160,9 @@
 	/*margin:0px 100px;*/
 	/*border-radius: 10px;*/
 /*}*/
+.global h1{
+	font-size: 30px;
+}
 .button{
 	border-radius: 10px;
 	transform: translate(0, 0);
