--- a/covid19/style.css
+++ b/covid19/style.css
@@ -166,7 +166,15 @@
 .button{
 	border-radius: 10px;
 	transform: translate(0, 0);
-	margin-left: 37%;
+	/*margin-left: 30%;*/
 	padding: 8px 20px;
 }
 } 
+@media only screen and (max-width: 750px){
+.button{
+	border-radius: 10px;
+	transform: translate(0, 0);
+	margin-left: 36%;
+	padding: 8px 20px;
+}
+}
